# LPCTron_ZH

./: .gitignore  build_tf_cpp_api_cmd.txt  c_tacotron_nodes.txt  dump_lpcnet_model.sh  freeze_model.sh  frontend_infer.sh  keras_classifier.sh  keras_cnn.sh  keras_cnn2.sh  keras_mlp.sh  keras_regressor.sh  keras_share_layers.sh  lpcnet_infer2.sh  lpcnet_infer3.sh  nohup_t2_train.sh  requirements.txt  synth_pcm1.f16  t2_train.sh  t2_train_256.sh  t2_train_256.sh.bak  t2_train_cpu.sh  t2_train_v2.sh  tacotron_infer.sh  tacotron_infer2.sh  tacotron_infer3.sh  tacotron_infer4.sh  tacotron_infer5.sh  tacotron_nodes.txt  tf_c_api_demo.c  tf_c_api_demo2.c  train.txt
LPCNet/: dump_data  dump_data.sh  dump_data_lpcnet_mini  dump_data_mini.sh  dump_data_t2  dump_lpcnet_model.sh  final.pcm  final_5.pcm  merge.sh  merge_5.sh  merge_pcm.sh  nohup_train_lpcnet.sh  train_lpcnet.sh  train_lpcnet_mini.sh
LPCNet/src/: dump_lpcnet_new.py  load_data_test.py  lpcnet.py  lpcnet_model_new.py  lpcnet_new.py  new_save_model.py  new_train_lpcnet.py  save_model_new.py  train_lpcnet_new.py  train_val_tb.py
Python-C/c_app/: CMakeLists.txt  main.cpp  receive.c  send_a.c  send_b.c  shm_read.c  shm_write.c
Python-C/python_app/: python_app.py
Tacotron-2/: ..bb_textipa_v3.txt  bb-pcm2npy.sh  bb-wav2pcm.sh  bb_py2ipa.sh  bb_py2ipa_v2.sh  bb_py2ipa_v3.bat  bb_py2ipa_v3.sh  bb_py2ipa_v3_win.sh  bb_py2ipa_v4.sh  bb_t2_preprocess.sh  bb_t2_preprocess_win.sh  bb_t2_preprocess_wsl_top10.sh  bb_train.py  biaobei_preprocess.py  change_sr_22050_wsl.sh  change_sr_sox_16k_wsl.sh  copy_f32.sh  cp_f32_audio.sh  erhuayin_conv.sh  erhuayin_util.py  freeze_model.py  frontend_infer.py  hparams.py  ipa_1w.txt  my_hparams.py  new_train.py  pinyin_1w_fixed_v2.txt  preprocess.py  py2ipa.py  py2ipa_v2.py  py2ipa_v3.py  py2ipa_v4.py  t2_preprocess.sh  t2_preprocess_top10.sh  tacotron_infer.py  tacotron_infer3.py  tacotron_infer4.py  tacotron_infer5.py  training-bb-t2.sh  trim_sil.py  (+4 more)
Tacotron-2/datasets/: audio.py  ipa_preprocessor.py  my_preprocessor.py  preprocessor.py
Tacotron-2/frontend/: hz2ipa.py
Tacotron-2/tacotron/: new_feeder.py  new_train.py  pb_synthesizer.py  pb_synthesizer2.py  synthesizer.py  synthesizer2.py  test_ipa_text.py  train.py
Tacotron-2/tacotron/models/: Architecture_wrappers.py  custom_decoder.py  modules.py  new_tacotron.py  tacotron.py
Tacotron-2/tacotron/utils/: ipa_symbols.py  ipa_text.py
Tacotron-2/wavenet_vocoder/: feeder.py
Tacotron-2/wavenet_vocoder/models/: __init__.py  modules.py  wavenet.py
bb_text/: ipa_dict1.txt  ipa_dict_v4.txt  ipa_v3.txt  ipa_v3_top10.txt  py_ehy_fixed.txt
c_tools/: .gitignore  CMakeLists.txt
c_tools/backup/: CMakeLists_backup.txt  load_mini_model.py  mini_model.cpp  save_mini_model.py  tf_diagnosis.cpp
c_tools/backup/mini_model/: simple.pbtx
c_tools/lpcnet_infer/: CMakeLists.txt  celt_lpc.cpp  dump_data_mini.c  test_json.cpp
c_tools/lpctron_infer/: CMakeLists.txt  TFUtils.cpp  TFUtils.hpp  backend_infer.cpp  dump_data.c  extra_tf_utils.cpp  extra_tf_utils.h  lpcnet_infer2.c  lpcnet_infer3.cpp  mini_model.cpp  taco_infer_c_api.cpp  taco_infer_cpp.cpp  taco_infer_cpp_0.cpp  taco_infer_cpp_2.cpp  tf_diagnosis.cpp  tf_diagnosis.h  tf_utils.hpp  vec_avx.h
c_tools/lpctron_infer/mini_model/: simple.pb
c_tools/posix_ipc/: CMakeLists.txt  client.c  logger.c  mq_client.c  posix_sem.c
c_tools/src/: CMakeLists.txt  freq.c  lpcnet.c  lpcnet_infer2.c  lpcnet_infer3.c  test_json.cpp
c_tools/tf_cpp_api_demo/: CMakeLists.txt  tf_cpp_api_demo.cpp
infer_grpc/: .gitignore  backend_infer.proto  backend_server.sh  backend_server_valgrind.sh  create_backend_container.sh  frontend_server.sh  lt_ws_v1.sh  nohup_tts_v24.sh  pcm2wav.sh  pcm2wav_8k_16k.sh  run_dummy_backend.sh  run_dummy_frontend.sh  run_protoc_cpp.sh  run_protoc_py.sh  url_test_v1.txt  url_test_v1txt.txt  valgrind_out.txt  ws_config_v1.json
infer_grpc/backend_infer/: .gitignore  AudioGenerater.cpp  AudioGenerater.h  CMakeLists.txt  CMakeLists_01.txt  backend_imp3.cpp  backend_imp3.h  backend_implement.cpp  backend_implement.h  backend_implement2.cpp  backend_implement2.h  backend_infer.grpc.pb.cc  backend_infer.grpc.pb.h  backend_infer.pb.cc  backend_infer.pb.h  backend_server.cpp  backend_server2.cpp  dnn_main_v1.cpp  dummy_backend.cpp  ffmpeq_tutorial1.cpp  pcm2wav.cpp  pcm2wav2.cpp  pcm2wav4.cpp  pcm2wav5.cpp  pcm2wav6.cpp  pcm2wav_demo.cpp  protoc_backend.sh  wav_utils.cpp  wav_utils.h  wav_utils_v2.cpp
infer_grpc/data/: dyz_dict.txt
infer_grpc/frontend_infer/: assistant.py  backend_infer_pb2.py  backend_infer_pb2_grpc.py  dummy_frontend_infer_grpc.py  frontend_server.py  frontend_utils.py  frontend_ws.py  message.py  my_logger.py  request_check.py
infer_grpc/out_pcm/: 1001.pcm  1004.pcm  1008.pcm  1009.pcm
infer_py/: .gitignore  lpcnet_infer1.sh
infer_py/lpcnet/: lpcnet_infer.py  lpcnet_model_new.py  mdense_new.py
infer_socket/: .gitignore  backend_server.sh  frontend_server.sh
infer_socket/backend/: .gitignore  BackendImp.cpp  BackendImp.h  CMakeLists.txt  backend_server.cpp  backend_server2.cpp  wav_utils_v2.cpp  wav_utils_v2.h
infer_socket/frontend/: frontend_server1.py  frontend_server2.py  tts_client.py
input_text/: input_text.txt
keras_learn/: classifier.py  cnn.py  cnn2.py  mlp.py  regressor.py  share_layers.py
logs-Tacotron/: Terminal_train_log
lpcnet_test/: 1008_ipa.txt  all_in_one.sh  all_in_one2.sh  audio-000001.s16  audio-000002.s16  dump_data_lpcnet  feature_1001.f32  feature_1002.f32  feature_1003.f32  feature_1004.f32  feature_1005.f32  features1.f32  features2.f32  gen_features.sh  lpcnet_infer.sh  pcm2wav.sh  pcm2wav_test.sh  synth_pcm1.f16  synth_pcm2.f16  synth_pcm3.f16  synth_pcm4.f16  synth_pcm5.f16
supplement_record/: add_sentence_id.py  add_sentence_id.sh  balance_analysis.py  balance_analysis.sh  num2hanzi.py  num2hz.sh  supplement_text.txt  supplement_text1.txt  supplement_text1_v2_num.txt  supplement_text1_v2_sent_id.txt  supplement_text_v1.txt  supplement_text_v2.txt
tacotron_output/: feature_1001.f32  feature_1002.f32  feature_1004.f32
(+6 files in other folders)
